--- a/Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
+++ b/Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
@@ -24,19 +24,23 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TTTgame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="Tic Tac Toe.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TTTgame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Tic Tac Toe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="Tic Tac Toe.rc">
-      <Filter>Resource Files</Filter>
-    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico">
@@ -45,5 +49,10 @@
     <Image Include="Tic Tac Toe.ico">
       <Filter>Resource Files</Filter>
     </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Tic Tac Toe.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
