--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 Tic Tac Toe/.vs/
 Tic Tac Toe/Debug/
 Tic Tac Toe/Tic Tac Toe/Debug/
+Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj
+Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.aps
+Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.ico
+Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
+Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj.user
+Tic Tac Toe/Tic Tac Toe/small.ico
