--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,19 @@
-.vs/
-Tic Tac Toe/.vs/
-Tic Tac Toe/Debug/
-Tic Tac Toe/Tic Tac Toe/Debug/
-Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj
-Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.aps
-Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.ico
-Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj.filters
-Tic Tac Toe/Tic Tac Toe/Tic Tac Toe.vcxproj.user
-Tic Tac Toe/Tic Tac Toe/small.ico
+*.log
+*.tlog
+*.aps
+*.ico
+*.vcxproj
+*.filters
+*.user
+*.txt
+*.sarif
+*.xml
+*.obj
+*.all
+*.idb
+*.pdb
+*.lastbuildstate
+*.applocal
+*.ilk
+*.lastcodeanalysissucceeded
+*.exe
