--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,5 @@
 *.ipch
 *.db
 *.sln
-Neural Network\Tic Tac Toe UI\Tic Tac Toe Game.cpp
-Neural Network\Tic Tac Toe UI\Tic Tac Toe Game.h
+**/Tic Tac Toe UI/Tic Tac Toe Game.cpp
+**/Tic Tac Toe UI/Tic Tac Toe Game.h
